[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/art/png/enemies/slime_walk.png" type="Texture" id=1]
[ext_resource path="res://assets/art/png/enemies/slime_dead.png" type="Texture" id=2]
[ext_resource path="res://assets/art/png/enemies/slime_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/scenes/enemySlime.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/pop.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 1.0
} ]

[sub_resource type="GDScript" id=4]
script/source = "extends AnimatedSprite


func _ready():
	pass
"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 25 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.99996
height = 48.0001

[sub_resource type="CapsuleShape2D" id=8]
radius = 15.0
height = 67.0

[node name="pinkSlime" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 51
script = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "walk"
playing = true
script = SubResource( 4 )

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="floorChecker" type="RayCast2D" parent="."]
position = Vector2( 0, 2 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2
collide_with_areas = true

[node name="topChecker" type="Area2D" parent="."]
position = Vector2( 1.43051e-06, 5 )
rotation = 1.5708
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="topChecker"]
position = Vector2( -22, 8.01086e-05 )
shape = SubResource( 7 )

[node name="sideChecker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sideChecker"]
position = Vector2( -2.5, 4 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="deathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0

[connection signal="body_entered" from="topChecker" to="." method="_on_topChecker_body_entered"]
[connection signal="body_entered" from="sideChecker" to="." method="_on_sideChecker_body_entered"]
